--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -15,5 +15,8 @@
   &__media {
     max-width: 80vw;
     max-height: 80vh;
+    aspect-ratio: var(--aspect-ratio);
+    object-fit: cover;
+    height: auto;
   }
 }
