--- a/assets/style.css
+++ b/assets/style.css
@@ -713,6 +713,27 @@ template {
   align-self: start;
 }
 
+.grid-system {
+  --column-end: span 1;
+  display: grid;
+  grid-template-columns: calc((100vw - var(--grid-gap) * 4) / 3) calc((100vw - var(--grid-gap) * 4) / 3) calc((100vw - var(--grid-gap) * 4) / 3);
+  grid-gap: var(--grid-gap);
+  grid-auto-rows: 20vw;
+  list-style-type: none;
+}
+.grid-system > * {
+  min-height: 50px;
+  min-width: 50px;
+  overflow: hidden;
+  grid-column-end: var(--column-end);
+  grid-row-end: var(--column-end);
+}
+.grid-system > * img, .grid-system > * figure {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 html {
   -webkit-font-smoothing: antialiased;
   font-smooth: always;
