--- a/src/scss/abstracts/generic/_grid.scss
+++ b/src/scss/abstracts/generic/_grid.scss
@@ -141,6 +141,7 @@ $grid--container: var(--wp--custom--spacing--wide-size);
 
 .grid-system {
   --column-end: span 1;
+  --row-end: span 1;
   // 1154
   $col: calc((100vw - (var(--grid-gap) * 4) )/3);
   display: grid;
@@ -155,7 +156,7 @@ $grid--container: var(--wp--custom--spacing--wide-size);
     min-width: 50px;
     overflow: hidden;
     grid-column-end: var(--column-end);
-    grid-row-end: var(--column-end);
+    grid-row-end: var(--row-end);
     img, figure {
       width: 100%;
       height: 100%;
