--- a/assets/style.css
+++ b/assets/style.css
@@ -729,10 +729,15 @@ template {
   grid-column-end: var(--column-end);
   grid-row-end: var(--row-end);
 }
+.grid-system > * figure {
+  display: flex;
+  flex-direction: column;
+}
 .grid-system > * img, .grid-system > * figure {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  overflow: hidden;
 }
 
 html {
