--- a/src/scss/abstracts/generic/_grid.scss
+++ b/src/scss/abstracts/generic/_grid.scss
@@ -157,10 +157,16 @@ $grid--container: var(--wp--custom--spacing--wide-size);
     overflow: hidden;
     grid-column-end: var(--column-end);
     grid-row-end: var(--row-end);
+
+    figure {
+      display: flex;
+      flex-direction: column;
+    }
     img, figure {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      overflow: hidden;
     }
     
   }
