--- a/src/scss/abstracts/generic/_grid.scss
+++ b/src/scss/abstracts/generic/_grid.scss
@@ -142,13 +142,15 @@ $grid--container: var(--wp--custom--spacing--wide-size);
 .grid-system {
   --column-end: span 1;
   --row-end: span 1;
+  --object-position: center;
+  --object-fit: cover;
   // 1154
-  $col: calc((100vw - (var(--grid-gap) * 4) )/3);
+  $col: calc((100vw - (var(--grid-gap) * 4)) / 3);
   display: grid;
   grid-template-columns: $col $col $col;
   grid-gap: var(--grid-gap);
   // grid-auto-rows: $col;
-  grid-auto-rows: 20vw; 
+  grid-auto-rows: 20vw;
   list-style-type: none;
 
   & > * {
@@ -157,17 +159,18 @@ $grid--container: var(--wp--custom--spacing--wide-size);
     overflow: hidden;
     grid-column-end: var(--column-end);
     grid-row-end: var(--row-end);
+  }
 
-    figure {
-      display: flex;
-      flex-direction: column;
-    }
-    img, figure {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      overflow: hidden;
-    }
-    
+  figure {
+    display: flex;
+    flex-direction: column;
+  }
+  img,
+  figure {
+    width: 100%;
+    height: 100%;
+    object-fit: var(--object-fit);
+    object-position: var(--object-position);
+    overflow: hidden;
   }
 }
