--- a/assets/style.css
+++ b/assets/style.css
@@ -1117,6 +1117,12 @@ figure {
   margin: 0 0;
 }
 
+.audio--fallback-print {
+  background-color: #f2f1f1;
+  padding: 0.75rem;
+  margin: 1rem 0;
+}
+
 .button {
   font-family: inherit;
   font-size: 1.25rem;
