--- a/src/scss/elements/_media.scss
+++ b/src/scss/elements/_media.scss
@@ -69,5 +69,6 @@ figure {
   background-color: #f2f1f1;
   padding: $gutter--md*0.75;
   margin: $gutter--md 0;
-
 }
+
+@media print { .audio--fallback-print { -webkit-print-color-adjust: exact; } }
