--- a/assets/style.css
+++ b/assets/style.css
@@ -946,6 +946,9 @@ article a:hover:before, article a.active:before {
   :root {
     font-size: 12px;
   }
+  article a {
+    text-decoration: underline;
+  }
 }
 html,
 body {
