--- a/assets/style.css
+++ b/assets/style.css
@@ -722,15 +722,28 @@ template {
   display: grid;
   grid-template-columns: calc((100vw - var(--grid-gap) * 4) / 3) calc((100vw - var(--grid-gap) * 4) / 3) calc((100vw - var(--grid-gap) * 4) / 3);
   grid-gap: var(--grid-gap);
-  grid-auto-rows: 20vw;
+  margin: 2rem 0;
+  grid-auto-rows: minmax(250px, 22vw);
   list-style-type: none;
 }
+@media only screen and (max-width: 992px) {
+  .grid-system {
+    grid-template-columns: 1fr;
+    grid-auto-rows: min-content;
+  }
+}
 .grid-system > * {
-  min-height: 50px;
+  min-height: 250px;
   min-width: 50px;
   overflow: hidden;
   grid-column-end: var(--column-end);
   grid-row-end: var(--row-end);
+}
+@media only screen and (max-width: 992px) {
+  .grid-system > * {
+    --row-end: span 1;
+    --column-end: span 1;
+  }
 }
 .grid-system--bordered {
   grid-gap: 0px;
@@ -739,12 +752,12 @@ template {
   border: 1px solid var(--border-color);
   padding: 1rem;
 }
-.grid-system figure {
+.grid-system figure, .grid-system figure > picture {
   display: flex;
   flex-direction: column;
 }
 .grid-system img,
-.grid-system figure {
+.grid-system figure, .grid-system picture {
   width: 100%;
   height: 100%;
   object-fit: var(--object-fit);
