--- a/src/scss/abstracts/generic/_grid.scss
+++ b/src/scss/abstracts/generic/_grid.scss
@@ -150,16 +150,27 @@ $grid--container: var(--wp--custom--spacing--wide-size);
   display: grid;
   grid-template-columns: $col $col $col;
   grid-gap: var(--grid-gap);
+  margin: $gutter--lg 0;
   // grid-auto-rows: $col;
-  grid-auto-rows: 20vw;
+  grid-auto-rows: minmax(250px, 22vw);
   list-style-type: none;
 
+  @include break("md", "max") {
+    grid-template-columns: 1fr;
+    grid-auto-rows: min-content;
+  }
+
   & > * {
-    min-height: 50px;
+    min-height: 250px;
     min-width: 50px;
     overflow: hidden;
     grid-column-end: var(--column-end);
     grid-row-end: var(--row-end);
+
+    @include break("md", "max") {
+      --row-end: span 1;
+      --column-end: span 1;
+    }
 
   }
 
@@ -172,12 +183,12 @@ $grid--container: var(--wp--custom--spacing--wide-size);
     }
   }
 
-  figure {
+  figure, figure > picture {
     display: flex;
     flex-direction: column;
   }
   img,
-  figure {
+  figure, picture {
     width: 100%;
     height: 100%;
     object-fit: var(--object-fit);
