fix pdf file size

--- a/assets/style.css
+++ b/assets/style.css
@@ -718,29 +718,28 @@ template {
   --row-end: span 1;
   --object-position: center;
   --object-fit: cover;
-  --border-color: white;
   display: grid;
   grid-template-columns: calc((100vw - var(--grid-gap) * 4) / 3) calc((100vw - var(--grid-gap) * 4) / 3) calc((100vw - var(--grid-gap) * 4) / 3);
   grid-gap: var(--grid-gap);
   margin: 2rem 0;
-  grid-auto-rows: minmax(250px, 22vw);
+  grid-auto-rows: min-content;
   list-style-type: none;
 }
 @media only screen and (max-width: 992px) {
   .grid-system {
     grid-template-columns: 1fr;
-    grid-auto-rows: min-content;
+    grid-auto-rows: 1fr;
   }
 }
-.grid-system > * {
-  min-height: 250px;
+.grid-system .list-item {
+  min-height: 50px;
   min-width: 50px;
   overflow: hidden;
   grid-column-end: var(--column-end);
   grid-row-end: var(--row-end);
 }
 @media only screen and (max-width: 992px) {
-  .grid-system > * {
+  .grid-system .list-item {
     --row-end: span 1;
     --column-end: span 1;
   }
@@ -766,8 +765,8 @@ template {
 }
 
 @media print {
-  .grid-system {
-    --border-color: black;
+  .list-item--video {
+    display: none;
   }
 }
 html {
@@ -782,6 +781,7 @@ html {
   --font-size--base: 1.25rem;
   --font-size--heading-mult: 1.5;
   --font-size--margin: 2rem;
+  --border-color: white;
 }
 @media only screen and (min-width: 1400px) {
   :root {
@@ -835,7 +835,7 @@ textarea {
 }
 
 h1 {
-  font-size: calc(var(--font-size--base) * 1.5 * var(--font-size--heading-mult));
+  font-size: calc(var(--font-size--base) * 1.25 * var(--font-size--heading-mult));
 }
 
 h2 {
@@ -843,16 +843,16 @@ h2 {
 }
 
 h3 {
-  font-size: calc(var(--font-size--base) * 1.5 * var(--font-size--heading-mult));
+  font-size: calc(var(--font-size--base) * 1 * var(--font-size--heading-mult));
 }
 
 h4 {
-  font-size: calc(var(--font-size--base) * 1.25 * var(--font-size--heading-mult));
+  font-size: calc(var(--font-size--base) * 0.8 * var(--font-size--heading-mult));
 }
 
 h5,
 h6 {
-  font-size: calc(var(--font-size--base) * 1.1 * var(--font-size--heading-mult));
+  font-size: calc(var(--font-size--base) * 0.7 * var(--font-size--heading-mult));
 }
 
 small, figure figcaption {
@@ -914,6 +914,9 @@ article p {
 article li p {
   margin-top: 0;
 }
+article ul {
+  margin: 1rem 0;
+}
 article ul li:before {
   content: "> ";
   display: inline;
@@ -929,13 +932,13 @@ article ul p {
 }
 article table {
   border-spacing: 0px;
-  border: 0.5px solid white;
+  border: 0.5px solid var(--border-color);
   margin: 1rem 0;
   text-align: left;
 }
 article table th, article table td {
   padding: 4px 8px;
-  border: 0.5px solid white;
+  border: 0.5px solid var(--border-color);
 }
 article a {
   position: relative;
@@ -972,6 +975,7 @@ article a:hover:before, article a.active:before {
 @media print {
   :root {
     font-size: 12px;
+    --border-color: rgba(0,0,0,.2);
   }
   article a {
     text-decoration: underline;
@@ -1047,7 +1051,7 @@ iframe {
 }
 
 @media print {
-  .container--full {
+  .container--full, .grid-system {
     page-break-before: always;
   }
 }
@@ -1072,7 +1076,7 @@ iframe {
     display: inherit;
   }
   .d--none-print {
-    display: none;
+    display: none !important;
   }
   iframe {
     display: none;
@@ -1272,7 +1276,7 @@ figure {
 }
 .header__media {
   max-width: 80vw;
-  max-height: 80vh;
+  max-height: 60vh;
   aspect-ratio: var(--aspect-ratio);
   object-fit: cover;
   height: auto;
