--- a/src/scss/abstracts/generic/_grid.scss
+++ b/src/scss/abstracts/generic/_grid.scss
@@ -144,7 +144,7 @@ $grid--container: var(--wp--custom--spacing--wide-size);
   --row-end: span 1;
   --object-position: center;
   --object-fit: cover;
-  --border-color: white;
+  
   // 1154
   $col: calc((100vw - (var(--grid-gap) * 4)) / 3);
   display: grid;
@@ -152,16 +152,16 @@ $grid--container: var(--wp--custom--spacing--wide-size);
   grid-gap: var(--grid-gap);
   margin: $gutter--lg 0;
   // grid-auto-rows: $col;
-  grid-auto-rows: minmax(250px, 22vw);
+  grid-auto-rows: min-content;
   list-style-type: none;
 
   @include break("md", "max") {
     grid-template-columns: 1fr;
-    grid-auto-rows: min-content;
+    grid-auto-rows: 1fr;
   }
 
-  & > * {
-    min-height: 250px;
+  .list-item {
+    min-height: 50px;
     min-width: 50px;
     overflow: hidden;
     grid-column-end: var(--column-end);
@@ -199,7 +199,9 @@ $grid--container: var(--wp--custom--spacing--wide-size);
 
 
 @media print {
- .grid-system {
-  --border-color: black;
- } 
+ 
+
+ .list-item--video {
+  display: none;
+ }
 }
