--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 // @import "components/navigation";
 // @import "components/form";
 // @import "components/accordion";
-// @import "components/lists";
+@import "components/lists";
 // @import "components/card";
 @import "components/screencontroller";
