--- a/assets/style.css
+++ b/assets/style.css
@@ -1093,11 +1093,10 @@ iframe {
 .front-page {
   break-after: page;
   margin-top: 100px;
-  margin-top: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  height: 100%;
+  min-height: 100%;
   align-items: flex-start;
   flex-wrap: nowrap;
   align-content: flex-start;
