--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -125,11 +125,11 @@ iframe {
 
 .front-page {
   break-after: page;
-  margin-top: 100px;
   display: flex;
+  margin-top: 100px;
   flex-direction: column;
   justify-content: flex-end;
-  min-height: 100%;
+  min-height: calc(100% - 100px);
   align-items: flex-start;
   flex-wrap: nowrap;
   align-content: flex-start;
