--- a/assets/style.css
+++ b/assets/style.css
@@ -804,7 +804,7 @@ html {
   }
 }
 
-body, html {
+html, body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: white;
   line-height: 1.5;
