--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -28,7 +28,7 @@ html {
   }
 }
 
-body, html {
+html, body {
   font-family: $font--main;
   color: $color--text-base;
   line-height: $line-height--base;
