font size not on html

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -27,8 +27,10 @@ html {
     --font-size--heading-mult: 1;
   }
 }
-
-html, body {
+html {
+  font-family: $font--main;
+}
+body {
   font-family: $font--main;
   color: $color--text-base;
   line-height: $line-height--base;
@@ -70,21 +72,19 @@ h2 {
 }
 
 h3 {
-  font-size: calc(
-    var(--font-size--base) * 1 * var(--font-size--heading-mult)
-  );
+  font-size: calc(var(--font-size--base) * 1 * var(--font-size--heading-mult));
 }
 
 h4 {
   font-size: calc(
-    var(--font-size--base) * .8 * var(--font-size--heading-mult)
+    var(--font-size--base) * 0.8 * var(--font-size--heading-mult)
   );
 }
 
 h5,
 h6 {
   font-size: calc(
-    var(--font-size--base) * .7 * var(--font-size--heading-mult)
+    var(--font-size--base) * 0.7 * var(--font-size--heading-mult)
   );
 }
 
@@ -92,7 +92,12 @@ small {
   font-size: calc(var(--font-size--base) * 0.7);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   a {
     color: inherit;
   }
@@ -100,7 +105,7 @@ h1, h2, h3, h4, h5, h6 {
 
 figure figcaption {
   @extend small;
-  opacity: .8;
+  opacity: 0.8;
   margin-top: $gutter--sm;
 }
 
@@ -132,8 +137,6 @@ ul {
 
 li {
   font-size: inherit;
-   
-  
 }
 
 .t--capitalise {
@@ -163,7 +166,7 @@ article {
     margin: 1rem 0;
 
     li:before {
-      content: '> ';
+      content: "> ";
       display: inline;
     }
 
@@ -181,16 +184,16 @@ article {
   }
   table {
     border-spacing: 0px;
-    border: .5px solid var(--border-color);
+    border: 0.5px solid var(--border-color);
     margin: 1rem 0;
     text-align: left;
-    th, td {
+    th,
+    td {
       padding: 4px 8px;
-      border: .5px solid var(--border-color);
-      
+      border: 0.5px solid var(--border-color);
     }
   }
-  
+
   a {
     position: relative;
     color: inherit;
@@ -228,15 +231,14 @@ article {
   }
 }
 
-
 @media print {
   // body {
   //   --font-size--base: 10pt;
   // }
-   
+
   :root {
-    font-size:12px;
-    --border-color: rgba(0,0,0,.2);
+    font-size: 12px;
+    --border-color: rgba(0, 0, 0, 0.2);
   }
 
   article a {
