--- a/assets/style.css
+++ b/assets/style.css
@@ -804,7 +804,11 @@ html {
   }
 }
 
-html, body {
+html {
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: white;
   line-height: 1.5;
@@ -860,7 +864,12 @@ small, figure figcaption {
   font-size: calc(var(--font-size--base) * 0.7);
 }
 
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
   color: inherit;
 }
 
@@ -937,7 +946,8 @@ article table {
   margin: 1rem 0;
   text-align: left;
 }
-article table th, article table td {
+article table th,
+article table td {
   padding: 4px 8px;
   border: 0.5px solid var(--border-color);
 }
@@ -976,7 +986,7 @@ article a:hover:before, article a.active:before {
 @media print {
   :root {
     font-size: 12px;
-    --border-color: rgba(0,0,0,.2);
+    --border-color: rgba(0, 0, 0, 0.2);
   }
   article a {
     text-decoration: underline;
